--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "coffeecode/datalayer": "^2.0",
         "coffeecode/router": "^2.0",
         "league/plates": "^3.5",
-        "phpoffice/phpspreadsheet": "^1.28"
+        "phpoffice/phpspreadsheet": "^1.28",
+        "firebase/php-jwt": "^6.4"
     },
     "license": "proprietary",
     "autoload": {
