--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "coffeecode/router": "^2.0",
         "league/plates": "^3.5",
         "phpoffice/phpspreadsheet": "^1.28",
-        "firebase/php-jwt": "^6.4"
+        "firebase/php-jwt": "^6.4",
+        "vlucas/phpdotenv": "^5.6"
     },
     "license": "proprietary",
     "autoload": {
