:bricks: ci: Modificação no .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
 # APPLICATION
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 APP_ENV=prod
 APP_NEEDS_AUTH=false
 
 # DATABASE
 DB_DRIVER=mysql
-DB_HOST=localhost
+DB_HOST=mysql
 DB_PORT=3306
-DB_NAME=advvm
+DB_NAME=mvc_advvm
 DB_USER=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 # VIEWS
 VW_TITLE=Advvm
