:bricks: ci: Modificação no docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - 8000:80
     volumes:
-      - /home/gteixeira/projects/mvc-advvm:/var/www/html
+      - .:/var/www/html
     depends_on:
       - mysql
     networks:
