:recycle: refactor: Abstraindo o acesso ao banco de dados para repositories

--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,8 @@
             "name": "Gustavo Teixeira de Sousa"
         }
     ],
-    "minimum-stability": "stable"
+    "minimum-stability": "stable",
+    "require-dev": {
+        "phpstan/phpstan": "^1.11"
+    }
 }
