--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,8 @@
     "require": {
         "php": "^8.0",
         "coffeecode/datalayer": "^2.0",
-        "coffeecode/router": "^2.0",
         "league/plates": "^3.5",
         "phpoffice/phpspreadsheet": "^1.28",
-        "firebase/php-jwt": "^6.4",
         "vlucas/phpdotenv": "^5.6",
         "php-di/php-di": "^7.0",
         "gteixeira/router": "^1.0"
@@ -27,8 +25,5 @@
             "name": "Gustavo Teixeira de Sousa"
         }
     ],
-    "minimum-stability": "stable",
-    "require-dev": {
-        "phpstan/phpstan": "^1.11"
-    }
+    "minimum-stability": "stable"
 }
