:truck: chore: Passando as funções do arquivo de config.php para um arquivo dedicado

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
             "Advvm\\": "src/"
         },
         "files": [
-            "src/Config.php"
+            "src/Library/functions/functions.php"
         ]
     },
     "authors": [
