:lock: remove: Removendo o parâmetro de id do usuário no payload do jwt

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # APPLICATION
 APP_URL=http://localhost:8000
 APP_ENV=prod
-APP_NEEDS_AUTH=false
+APP_NEEDS_AUTH=true
 
 # DATABASE
 DB_DRIVER=mysql
@@ -18,4 +18,4 @@ VW_TITLE=Advvm
 SP_NAME_TEMPLATE="Relatorio - "
 
 # AUTH JWT
-JWT_KEY= # JWT UNIQUE HASH KEY
+JWT_SECRET= # JWT UNIQUE HASH KEY
